fix(Popup):remove style overflow-y: auto (#2185)

--- a/packages/popup/index.less
+++ b/packages/popup/index.less
@@ -7,7 +7,6 @@
   left: 50%;
   box-sizing: border-box;
   max-height: 100%;
-  overflow-y: auto;
   transition-timing-function: ease;
   animation: ease both;
   -webkit-overflow-scrolling: touch;
